# WQF7010_Robotics

./: README.md  docs.txt
ros_ws/src/audio_feedback/scripts/: play_beep.py  say_please.py  tts_feedback.py
ros_ws/src/interaction_manager/: CMakeLists.txt  package.xml
ros_ws/src/interaction_manager/scripts/: interaction_manager.py
ros_ws/src/launch/: smile_bot.launch
ros_ws/src/photo_manager/scripts/: photo_manager.py
ros_ws/src/smile_detection/scripts/: smile_detection_testing.py  smile_detector.py
ros_ws/src/voice_control/scripts/: voice_listener.py
smily_bot_ws/devel/: .catkin  .rosinstall
smily_bot_ws/devel/lib/pkgconfig/: audio_feedback.pc  interaction_manager.pc  photo_manager.pc  smile_detection.pc  voice_control.pc
smily_bot_ws/devel/share/audio_feedback/cmake/: audio_feedbackConfig.cmake
smily_bot_ws/devel/share/interaction_manager/cmake/: interaction_managerConfig.cmake
smily_bot_ws/src/audio_feedback/: CMakeLists.txt
smily_bot_ws/src/audio_feedback/src/: play_beep.py  tts_feedback.py
smily_bot_ws/src/interaction_manager/: CMakeLists.txt
smily_bot_ws/src/interaction_manager/launch/: smily_bot.launch
smily_bot_ws/src/interaction_manager/src/: interaction_manager.py
smily_bot_ws/src/photo_manager/: CMakeLists.txt
smily_bot_ws/src/photo_manager/src/: photo_manager.py
smily_bot_ws/src/smile_detection/: CMakeLists.txt  package.xml
smily_bot_ws/src/smile_detection/src/: smile_detection_testing.py  smile_detector.py
smily_bot_ws/src/voice_control/src/: voice_listener.py
(+3 files in other folders)
